# Codemni-ToolCallAgent

./: .gitignore  CHANGELOG.md  DEPLOYMENT_STEPS.md  LICENSE  MANIFEST.in  PACKAGE_READY.md  PUBLISHING.md  QUICK_SETUP.md  README.md  pyproject.toml  requirements.txt  setup.py  test_package.py
$RECYCLE.BIN/S-1-5-21-2384740024-289625340-625990777-1001/: $I17Q82T.md  $I2GVK3Y.py  $I2JESVE.py  $I39GI58.py  $I3E3C54.py  $I3IIXV7.md  $I3KUDB5.md  $I3NRPHT.py  $I4H7UMS  $I4Q4FVB.md  $I6EE8PK.py  $I6J785U  $I71FAC7.md  $I7INAN9.md  $I7VACPT.py  $I8OP6NE.py  $I8TINZZ.md  $I9APEDT.py  $I9IYU9S.py  $IAEU4IK.py  $IB2SZS0.py  $IBN9Z7D.txt  $ICDZLTO.md  $ICLGMJ2  $ICLVL0R.py  $ICOYS00.py  $IDHKE7Y.txt  $IEBWVDS.md  $IEJGO3C.py  $IFABCHR.py  $IHLICAS.md  $IHR4IWB.py  $IINIQO5.py  $IMF5PXJ.py  $INYOQFK  $INZ4KPU.md  $IOV43VD.py  $IP87C1W.md  $IPHIM7B.md  $IPOSCDV.md  (+39 more)
$RECYCLE.BIN/S-1-5-21-2384740024-289625340-625990777-1001/$R6J785U/: __init__.py  agent.py  base.py  prompt.py
$RECYCLE.BIN/S-1-5-21-2384740024-289625340-625990777-1001/$RCLGMJ2/: __init__.py  agent_config.py  base_agent.py  colors.py  flexible_agent.py  llm_interface.py  response_parser.py  tool_executor.py
$RECYCLE.BIN/S-1-5-21-2384740024-289625340-625990777-1001/$RNYOQFK/: __init__.py  gemini_adapter.py  openai_adapter.py
agent/ToolCall_Agent/: __init__.py  agent.py  llm_providers.py  prompt.py
examples/: README.md  basic_usage.py  different_llm_providers.py  multiple_tools.py
